src/unit_tests/Semantics/fail/addedlet-int+string.cl
class Foo {
	bar() : Int
	{
		let a:Int in a + let b:String in b
	};
};

class Main {
	main() : Int {
		1
	};
};